testsuite/tests/grammar/invalid_token_families/common.lkt
@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(Identifier(@Identifier) | Number(@Number))
}

class FooNode implements Node[FooNode] {
}

class Identifier: FooNode implements TokenNode {
}

class Number: FooNode implements TokenNode {
}
